--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,12 @@
 {
-	"name": "client",
+	"name": "client MERN CRUD",
 	"author": "Henok R. Bedassa",
 	"web": "henok.us",
 	"email": "jackbalageru@yahoo.com",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@nkalpak/react-ios-pwa-prompt": "^1.8.7",
 		"@testing-library/jest-dom": "^5.16.2",
 		"@testing-library/react": "^12.1.3",
 		"@testing-library/user-event": "^13.5.0",
@@ -16,7 +17,19 @@
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^6.2.2",
 		"react-scripts": "5.0.0",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"workbox-background-sync": "^5.1.4",
+		"workbox-broadcast-update": "^5.1.4",
+		"workbox-cacheable-response": "^5.1.4",
+		"workbox-core": "^5.1.4",
+		"workbox-expiration": "^5.1.4",
+		"workbox-google-analytics": "^5.1.4",
+		"workbox-navigation-preload": "^5.1.4",
+		"workbox-precaching": "^5.1.4",
+		"workbox-range-requests": "^5.1.4",
+		"workbox-routing": "^5.1.4",
+		"workbox-strategies": "^5.1.4",
+		"workbox-streams": "^5.1.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
