--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
 		"bootstrap-icons": "^1.8.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-ios-pwa-prompt": "^1.8.4",
 		"react-router-dom": "^6.2.2",
 		"react-scripts": "5.0.0",
 		"web-vitals": "^2.1.4",
