--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -5,7 +5,8 @@
 		{
 			"src": "favicon.ico",
 			"sizes": "64x64 32x32 24x24 16x16",
-			"type": "image/x-icon"
+			"type": "image/x-icon",
+			"purpose": "any maskable"
 		},
 		{
 			"src": "logo192.png",
