--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -4,7 +4,7 @@
 	"icons": [
 		{
 			"src": "favicon.ico",
-			"sizes": "64x64 32x32 24x24 16x16",
+			"sizes": "48x48",
 			"type": "image/x-icon",
 			"purpose": "any maskable"
 		},
