--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,9 @@
 	"email": "jackbalageru@yahoo.com",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": ".",
+	"main": "index.js",
+	"proxy": "http://mern-crud-henny.herokuapp.com",
 	"dependencies": {
 		"@nkalpak/react-ios-pwa-prompt": "^1.8.7",
 		"@testing-library/jest-dom": "^5.16.2",
@@ -36,7 +39,9 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -56,8 +61,6 @@
 			"last 1 safari version"
 		]
 	},
-	"proxy": "http://localhost:8080",
 	"description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-	"main": "index.js",
 	"license": "ISC"
 }
