--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
 	"private": true,
 	"homepage": ".",
 	"main": "index.js",
-	"proxy": "http://https://mern-crud-node.vercel.app/",
+	"proxy": "https://mern-crud-node-api.vercel.app/",
 	"dependencies": {
 		"@nkalpak/react-ios-pwa-prompt": "^1.8.7",
 		"@testing-library/jest-dom": "^5.16.2",
