--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
 	"web": "henok.us",
 	"email": "jackbalageru@yahoo.com",
 	"description": "",
-	"main": "node index.js",
+	"main": "index.js",
 	"dependencies": {
 		"axios": "^0.26.0",
 		"cors": "^2.8.5",
